--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,21 +5,21 @@
 	id="WebApp_ID" version="3.1">
 	<display-name>BYSJ</display-name>
 
-	<!--  -->
+	<!-- -->
 	<filter>
-	    <filter-name>SessionLoginFilter</filter-name>
-	    <filter-class>com.stx.filter.LoginFilter</filter-class>
-	    <init-param>
-	        <param-name>disAuth</param-name>
-	        <param-value>/js/easyform.js;/css/style-regist.css;/css/base.css;/css/styles.css;/merchant/merchant_login.action;/merchant/merchant_doLogin.action;/merchant/merchant_register.action;/merchant/merchant_doRegist.action;/merchant/merchant_logout.action;/static/bootstrap/css/bootstrap.min.css;/static/css/base.css;/js/jquery-2.2.2.min.js;/bootstrap/js/bootstrap.min.js;/user/user_doLogin.action;/user/user_register.action;/user/user_doRegist.action;/user/user_login.action;/bootstrap/css/bootstrap.min.css;/admin/admin_login.action;/admin/admin_doLogin.action;/bootstrap/css/bootstrap-datetimepicker.min.css;/bootstrap/js/bootstrap-datetimepicker.min.js;/bootstrap/js/bootstrap-datetimepicker.zh-CN.js;/admin/admin_logout.action</param-value>
-	    </init-param>
+		<filter-name>SessionLoginFilter</filter-name>
+		<filter-class>com.stx.filter.LoginFilter</filter-class>
+		<init-param>
+			<param-name>disAuth</param-name>
+			<param-value>/js/easyform.js;/css/style-regist.css;/css/base.css;/css/styles.css;/merchant/merchant_login.action;/merchant/merchant_doLogin.action;/merchant/merchant_register.action;/merchant/merchant_doRegist.action;/merchant/merchant_logout.action;/static/bootstrap/css/bootstrap.min.css;/static/css/base.css;/js/jquery-2.2.2.min.js;/bootstrap/js/bootstrap.min.js;/user/user_doLogin.action;/user/user_register.action;/user/user_doRegist.action;/user/user_login.action;/bootstrap/css/bootstrap.min.css;/admin/admin_login.action;/admin/admin_doLogin.action;/bootstrap/css/bootstrap-datetimepicker.min.css;/bootstrap/js/bootstrap-datetimepicker.min.js;/bootstrap/js/bootstrap-datetimepicker.zh-CN.js;/admin/admin_logout.action</param-value>
+		</init-param>
 	</filter>
 	<filter-mapping>
-	    <filter-name>SessionLoginFilter</filter-name>
-	    <url-pattern>/*</url-pattern>
-	</filter-mapping> 
-	
-	
+		<filter-name>SessionLoginFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
+
 	<!-- 配置Spring的核心监听器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -44,20 +44,26 @@
 		<dispatcher>REQUEST</dispatcher>
 	</filter-mapping>
 
-	<!-- hibernate配置
-	<filter>
-		<filter-name>SpringOpenSessionInViewFilter</filter-name>
-		<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
-	</filter>
-	<filter-mapping>
-		<filter-name>SpringOpenSessionInViewFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	<!-- hibernate配置 <filter> <filter-name>SpringOpenSessionInViewFilter</filter-name> 
+		<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class> 
+		</filter> <filter-mapping> <filter-name>SpringOpenSessionInViewFilter</filter-name> 
+		<url-pattern>/*</url-pattern> </filter-mapping> -->
 
 	<!-- session失效时间 -->
-	<!-- <session-config> <session-timeout>30</session-timeout> </session-config>  -->
+	<!-- <session-config> <session-timeout>30</session-timeout> </session-config> -->
 
 	<!-- 配置首页 -->
+
+	<error-page>
+		<error-code>404</error-code>
+		<location>/404.jsp</location>
+	</error-page>
+
+	<error-page>
+		<error-code>500</error-code>
+		<location>/500.jsp</location>
+	</error-page>
+
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
